--- a/css/master.css
+++ b/css/master.css
@@ -35,6 +35,11 @@ footer{
 footer > p > i{
   color: rgb(255, 80, 80);
 }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .container{
   max-width: 500px;
   margin: 0 auto;
